feat: drop propagateSystemProperties