@@ -23,7 +23,7 @@ import io.gatling.plugin.util.Fork;
 import io.gatling.shared.cli.RecorderCliOptions;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 import org.apache.maven.model.Resource;
@@ -119,7 +119,6 @@ public final class RecorderMojo extends AbstractGatlingMojo {
               GatlingConstants.DEFAULT_JVM_OPTIONS_BASE,
               recorderArgs,
               toolchain,
-              true,
               null);
       forkedRecorder.run();
     } catch (MojoExecutionException | MojoFailureException e) {
@@ -131,11 +130,11 @@ public final class RecorderMojo extends AbstractGatlingMojo {
 
   private List<String> recorderArgs(
       Path simulationsDirectory, String format, Path testResourcesDirectory) throws Exception {
-    List<String> args = new ArrayList<>();
-    args.addAll(
-        List.of(
+    List<String> args =
+        Arrays.asList(
             RecorderCliOptions.SimulationsFolder.shortOption(),
-            simulationsDirectory.toFile().getCanonicalPath()));
+            simulationsDirectory.toFile().getCanonicalPath());
+
     if (format != null) {
       // format is option, best suited Java version will be picked
       args.addAll(List.of(RecorderCliOptions.Format.shortOption(), format));
